--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^6.14.0",
+    "mongoose": "^8.11.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
